--- a/composer.json
+++ b/composer.json
@@ -24,10 +24,10 @@
         "symfony/polyfill-apcu": "^1.0",
         "symfony/swiftmailer-bundle": "^2.6.4",
         "symfony/symfony": "3.4.*",
+        "twig/twig": "^1.0||^2.0",
         "whiteoctober/tcpdf-bundle": "^1.0.2",
         "liuggio/excelbundle": "dev-master",
-        "lunasoft/sw-sdk-php": "dev-master",
-        "twig/twig": "^1.0||^2.0"
+        "lunasoft/sw-sdk-php": "dev-master"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
